[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Project.gd" type="Script" id=1]
[ext_resource path="res://UI Prefabs/TaskItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://defaultTheme.tres" type="Theme" id=6]
[ext_resource path="res://BurgerMenuIcon.png" type="Texture" id=7]

[node name="ListedProject" type="Control"]
margin_right = 400.0
margin_bottom = 45.0
script = ExtResource( 1 )

[node name="Top" type="Control" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 45 )

[node name="Background" type="ColorRect" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
color = Color( 0.364706, 0.364706, 0.364706, 0.392157 )

[node name="SizeTween" type="Tween" parent="Top/Background"]

[node name="ColorTween" type="Tween" parent="Top/Background"]

[node name="ColorRect" type="ColorRect" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )

[node name="SizeTween" type="Tween" parent="Top/ColorRect"]

[node name="ColorTween" type="Tween" parent="Top/ColorRect"]

[node name="Control" type="Control" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContentBackground" type="Panel" parent="Top/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Top/Control/ContentBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="Project_Name" type="LineEdit" parent="Top/Control/ContentBackground/HBoxContainer"]
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Project Name"

[node name="P" type="Label" parent="Top/Control/ContentBackground/HBoxContainer"]
margin_left = 284.0
margin_right = 344.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
size_flags_vertical = 7
text = "100%"
align = 1
valign = 1

[node name="LabelTween" type="Tween" parent="Top/Control/ContentBackground/HBoxContainer/P"]

[node name="OptionButton" type="OptionButton" parent="Top/Control/ContentBackground/HBoxContainer"]
visible = false
margin_left = 243.0
margin_right = 344.0
margin_bottom = 30.0
rect_min_size = Vector2( 95, 0 )
text = "Not Started"
flat = true
items = [ "Not Started", null, false, 0, null, "WIP", null, false, 1, null, "Testing", null, false, 2, null, "Cancelled", null, false, 3, null, "Complete", null, false, 4, null, "On Hold", null, false, 5, null ]
selected = 0

[node name="MenuButton" type="MenuButton" parent="Top/Control/ContentBackground/HBoxContainer"]
margin_left = 354.0
margin_right = 384.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 2
icon = ExtResource( 7 )
expand_icon = true
items = [ "Add New Task", null, 0, false, false, 0, 0, null, "", false, "Show/Hide", null, 0, false, false, 1, 0, null, "", false, "Delete Project", null, 0, false, false, 2, 0, null, "", false ]

[node name="VTaskContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0

[node name="TaskItem" parent="VTaskContainer" instance=ExtResource( 2 )]
visible = false
